--- a/.css
+++ b/.css
@@ -1,6 +1,7 @@
 *{ 
     margin: 0;
     padding: 0;
+    font-family: 'Popins', sans-serif;
 }
 .header {
     min-height: 100;
@@ -30,4 +31,15 @@ nav-links{
     color: #fff;
     text-decoration: none; 
     font-size: 13px;
+}
+.nav-links ul li::after{
+    content: '';
+    width: 0%;
+    height: 2px;
+    background: #f44336;
+    display: block;
+    margin: auto;
+}
+.nav-links ul li:hover::after{
+    width: 100%;
 }
