--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ header{
 	margin:0;
 	justify-content: center;
 	align-items: center;
+	flex-wrap: wrap;
 
 }
 
@@ -343,27 +344,19 @@ input:checked + label + .lightbox {
 	background-repeat: no-repeat;
 	background-size: cover;
 	height: 100vh;
-	background-position: center
+	background-position: center;
 	
+	
+.headingtalks6{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	color:white;
+	text-align: center;
 
 }
-.headingtalks1{
-	color: white;
-	display: flex;
-	flex-direction: column;
-	justify-items: center;
-	align-items: center;
-	transform: translate(0%,500%);
-	font-size: large;
-}
-.headingtalks2{
-	color: white;
-	display: flex;
-	flex-direction: column;
-	justify-items: center;
-	align-items: center;
-	text-align: center;
-	transform: translate(0%,500%);
+
 
 }
 .headingtalks3{
@@ -387,10 +380,14 @@ margin: 10%;
 	justify-items: center;
 	align-items: center;
 	text-align: center;
-	transform: translate(0%,500%);
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
 	font-style: oblique;
 }
 .headingprojects2{
 	margin:10%;
 	
 }
+
