--- a/style.css
+++ b/style.css
@@ -6,6 +6,36 @@
 	box-sizing: border-box;
 }
 
+.poppins-regular {
+	font-family: "Poppins", sans-serif;
+	font-weight: 400;
+	font-style: normal;
+}
+
+.poppins-medium {
+	font-family: "Poppins", sans-serif;
+	font-weight: 500;
+	font-style: normal;
+}
+
+.poppins-semibold {
+	font-family: "Poppins", sans-serif;
+	font-weight: 600;
+	font-style: normal;
+}
+
+.poppins-bold {
+	font-family: "Poppins", sans-serif;
+	font-weight: 700;
+	font-style: normal;
+}
+
+.poppins-regular-italic {
+	font-family: "Poppins", sans-serif;
+	font-weight: 400;
+	font-style: italic;
+}
+
 body,
 html {
 
@@ -13,7 +43,7 @@ html {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	font-family: "Poppins", sans-serif;
+	font-family: 'Playfair Display', sans-serif;
 }
 
 ul {
@@ -66,13 +96,14 @@ header {
 	color: white;
 	display: flex;
 	flex-direction: column;
-	height: calc(100dvh - 72px);
+	height: calc(100dvh);
 	text-align: center;
 	background-position: center;
 	justify-content: center;
 	align-items: center;
 	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(background.jpg);
 	background-size: cover;
+
 }
 
 .introduction {
@@ -450,7 +481,6 @@ label img {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	font-style: oblique;
 }
 
 .headingprojects2 {
