--- a/style.css
+++ b/style.css
@@ -235,7 +235,7 @@ header {
 }
 
 .Hagoromo {
-	background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(hagoromo.jpg);
+	background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(hagoromoooo.jpg);
 	background-size: cover;
 	height: 100vh;
 	display: flex;
