--- a/style.css
+++ b/style.css
@@ -460,6 +460,14 @@ label img {
 
 }
 
+.Hass {
+	background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.7)), url(Bild.website1.JPG);
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 100vh;
+	background-position: center;
+}
+
 .headingtalks4 {
 	margin: 10%;
 }
@@ -470,21 +478,9 @@ label img {
 	background-size: cover;
 	height: 100vh;
 	background-position: center;
-}
-
-.headingprojects1 {
 	color: white;
-	display: flex;
-	flex-direction: column;
-	justify-items: center;
-	align-items: center;
+	align-content: center;
 	text-align: center;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-
-
 }
 
 .headingprojects2 {
